# agentic-ai

./: .gitignore  CLAUDE.md  README.md  requirements.txt
.github/workflows/: deep-researcher.yml
ai_researcher/: README.md  pyproject.toml
ai_researcher/knowledge/: user_preference.txt
ai_researcher/src/ai_researcher/: crew.py  main.py
ai_researcher/src/ai_researcher/config/: agents.yaml  tasks.yaml
ai_researcher/src/ai_researcher/tools/: pushover_tool.py
databases/: deep_researcher_schema.sql
deep_researcher/: README.md  pyproject.toml
deep_researcher/src/deep_researcher/: crew.py  main.py  schema.py
deep_researcher/src/deep_researcher/config/: agents.yaml  tasks.yaml
tools/: pyproject.toml
tools/src/shared_tools/: pushover_tool.py  turso_base_tool.py  turso_research_record_tool.py  turso_research_sources_tool.py  tursodb_tool.py
