[project]
name = "ai_researcher"
version = "0.1.0"
description = "ai_researcher using CrewAI"
authors = [{ name = "Lingchen Zhu", email = "zhulingchen@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.0",
    "crewai-tools[mcp]>=1.2.0",
]

[project.scripts]
ai_researcher = "ai_researcher.main:run"
run_crew = "ai_researcher.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"