[project]
name = "deep_researcher"
version = "0.1.0"
description = "deep_researcher using CrewAI"
authors = [{ name = "Lingchen Zhu", email = "zhulingchen@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.0",
    "crewai-tools[mcp]>=1.2.0",
    "shared_tools",
    "libsql>=0.1.11",
]

[project.scripts]
deep_researcher = "deep_researcher.main:run"
run_crew = "deep_researcher.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv.sources]
shared_tools = { path = "../tools", editable = true }
